src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Role_Id__c</fullName>
        <label>Role Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_to_Market__c</fullName>
        <label>Route-to-Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Webshop</fullName>
                </value>
                <value>
                    <fullName>Supermarket</fullName>
                </value>
                <value>
                    <fullName>Dealers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Account_Name__c</fullName>
        <label>Second Account Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <defaultValue>IF( $Profile.Name = &apos;JDE - Partner - Community User&apos;, &apos;SAP_A&apos;, &apos;&apos;)</defaultValue>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Need__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Need</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sixteen_Years_or_Older__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sixteen Years or Older</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Converted__c</fullName>
        <formula>Stage_Time_Stamp_Disqualified__c - Stage_Time_Stamp_Converted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Converted</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Disqualified__c</fullName>
        <formula>Stage_Time_Stamp_Disqualified__c - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Disqualified</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Follow_Up__c</fullName>
        <formula>DATEVALUE(Stage_Time_Stamp_Converted__c) - Stage_Time_Stamp_Follow_Up__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Follow-Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_In_Progress__c</fullName>
        <formula>IF(!ISBLANK(Stage_Time_Stamp_Converted__c),
Stage_Time_Stamp_Converted__c - Stage_Time_Stamp_In_Progress__c,
IF(!ISBLANK(Stage_Time_Stamp_Disqualified__c),
Stage_Time_Stamp_Disqualified__c - Stage_Time_Stamp_In_Progress__c,
NOW() - Stage_Time_Stamp_In_Progress__c))</formula>
        <label>Stage Duration In Progress</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Nurture__c</fullName>
        <formula>Stage_Time_Stamp_Follow_Up__c - Stage_Time_Stamp_Nurture__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Nurture</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Open__c</fullName>
        <formula>IF(!ISBLANK(Stage_Time_Stamp_In_Progress__c),
Stage_Time_Stamp_In_Progress__c - Stage_Time_Stamp_Open__c,
IF(!ISBLANK(Stage_Time_Stamp_Nurture__c),
Stage_Time_Stamp_Nurture__c - DATEVALUE(Stage_Time_Stamp_Open__c),
IF(!ISBLANK(Stage_Time_Stamp_Disqualified__c),
Stage_Time_Stamp_Disqualified__c - Stage_Time_Stamp_Open__c,
IF(!ISBLANK(Stage_Time_Stamp_Converted__c),
Stage_Time_Stamp_Converted__c - Stage_Time_Stamp_Open__c,
NOW() - Stage_Time_Stamp_Open__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Open</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Converted__c</fullName>
        <label>Stage Time Stamp Converted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Disqualified__c</fullName>
        <label>Stage Time Stamp Disqualified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Follow_Up__c</fullName>
        <label>Stage Time Stamp Follow-Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_In_Progress__c</fullName>
        <label>Stage Time Stamp In Progress</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Nurture__c</fullName>
        <label>Stage Time Stamp Nurture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Open__c</fullName>
        <label>Stage Time Stamp Open</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <label>Sub-Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>PKL_Subsegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Stage_Duration__c</fullName>
        <formula>IF(CONTAINS(TEXT(Status), &quot;Converted&quot;) || ISPICKVAL(Status, &quot;Disqualified&quot;) ,
IF(CONTAINS(TEXT(Status), &quot;Converted&quot;), Stage_Time_Stamp_Converted__c - Stage_Time_Stamp_Open__c ,
IF(ISPICKVAL(Status, &quot;Disqualified&quot;), Stage_Time_Stamp_Disqualified__c - Stage_Time_Stamp_Open__c, 0) ),

Now() - Stage_Time_Stamp_Open__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stage Duration</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Touchpoint_Type__c</fullName>
        <defaultValue>IF( $Profile.Name = &apos;JDE - Partner - Community User&apos;, &apos;REFERRAL PARTNER&apos;, &apos;&apos;)</defaultValue>
        <label>Touchpoint Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_TouchpointType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Reg_Check_Rule__c</fullName>
        <formula>CASE(  $User.Sales_Organization__c  ,   
&apos;AT&apos;, $Setup.VAT_Validation_Check_Rule__c.AT__c , 
&apos;SAP_0333&apos;, $Setup.VAT_Validation_Check_Rule__c.BE__c , 
&apos;BG&apos;, $Setup.VAT_Validation_Check_Rule__c.BG__c , 
&apos;CY&apos;, $Setup.VAT_Validation_Check_Rule__c.CY__c , 
&apos;CZ&apos;, $Setup.VAT_Validation_Check_Rule__c.CZ__c , 
&apos;SAP_6712&apos;, $Setup.VAT_Validation_Check_Rule__c.DE__c , 
&apos;SAP_0975&apos;, $Setup.VAT_Validation_Check_Rule__c.DK__c ,
&apos;EE&apos;, $Setup.VAT_Validation_Check_Rule__c.EE__c , 
&apos;SAP_0080&apos;, $Setup.VAT_Validation_Check_Rule__c.ES__c , 
&apos;FI&apos;, $Setup.VAT_Validation_Check_Rule__c.FI__c , 
&apos;SAP_6706&apos;, $Setup.VAT_Validation_Check_Rule__c.FR__c , 
&apos;SAP_6750&apos;, $Setup.VAT_Validation_Check_Rule__c.GB__c ,
&apos;EL&apos;, $Setup.VAT_Validation_Check_Rule__c.EL__c , 
&apos;HR&apos;, $Setup.VAT_Validation_Check_Rule__c.HR__c , 
&apos;HU&apos;, $Setup.VAT_Validation_Check_Rule__c.HU__c , 
&apos;SAP_6709&apos;, $Setup.VAT_Validation_Check_Rule__c.IE__c , 
&apos;IT&apos;, $Setup.VAT_Validation_Check_Rule__c.IT__c , 
&apos;LT&apos;, $Setup.VAT_Validation_Check_Rule__c.LT__c , 
&apos;LU&apos;, $Setup.VAT_Validation_Check_Rule__c.LU__c , 
&apos;LV&apos;, $Setup.VAT_Validation_Check_Rule__c.LV__c , 
&apos;MC&apos;, $Setup.VAT_Validation_Check_Rule__c.MC__c , 
&apos;MT&apos;, $Setup.VAT_Validation_Check_Rule__c.MT__c , 
&apos;SAP_0111&apos;, $Setup.VAT_Validation_Check_Rule__c.NL__c , 
&apos;SAP_6864&apos;, $Setup.VAT_Validation_Check_Rule__c.NO__c ,
&apos;PL&apos;, $Setup.VAT_Validation_Check_Rule__c.PL__c , 
&apos;PT&apos;, $Setup.VAT_Validation_Check_Rule__c.PT__c , 
&apos;RO&apos;, $Setup.VAT_Validation_Check_Rule__c.RO__c , 
&apos;SAP_0976&apos;, $Setup.VAT_Validation_Check_Rule__c.SE__c , 
&apos;SI&apos;, $Setup.VAT_Validation_Check_Rule__c.SI__c , 
&apos;SK&apos;, $Setup.VAT_Validation_Check_Rule__c.SK__c , 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Reg Check Rule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Reg_Length__c</fullName>
        <formula>CASE(  $User.Sales_Organization__c  ,   
&apos;AT&apos;, $Setup.VAT_Validation_Length__c.AT__c , 
&apos;SAP_0333&apos;, $Setup.VAT_Validation_Length__c.BE__c , 
&apos;BG&apos;, $Setup.VAT_Validation_Length__c.BG__c , 
&apos;CY&apos;, $Setup.VAT_Validation_Length__c.CY__c , 
&apos;CZ&apos;, $Setup.VAT_Validation_Length__c.CZ__c , 
&apos;SAP_6712&apos;, $Setup.VAT_Validation_Length__c.DE__c , 
&apos;SAP_0975&apos;, $Setup.VAT_Validation_Length__c.DK__c ,
&apos;EE&apos;, $Setup.VAT_Validation_Length__c.EE__c , 
&apos;SAP_0080&apos;, $Setup.VAT_Validation_Length__c.ES__c , 
&apos;FI&apos;, $Setup.VAT_Validation_Length__c.FI__c , 
&apos;SAP_6706&apos;, $Setup.VAT_Validation_Length__c.FR__c , 
&apos;SAP_6750&apos;, $Setup.VAT_Validation_Length__c.GB__c ,
&apos;EL&apos;, $Setup.VAT_Validation_Length__c.EL__c , 
&apos;HR&apos;, $Setup.VAT_Validation_Length__c.HR__c , 
&apos;HU&apos;, $Setup.VAT_Validation_Length__c.HU__c , 
&apos;SAP_6709&apos;, $Setup.VAT_Validation_Length__c.IE__c , 
&apos;IT&apos;, $Setup.VAT_Validation_Length__c.IT__c , 
&apos;LT&apos;, $Setup.VAT_Validation_Length__c.LT__c , 
&apos;LU&apos;, $Setup.VAT_Validation_Length__c.LU__c , 
&apos;LV&apos;, $Setup.VAT_Validation_Length__c.LV__c , 
&apos;MC&apos;, $Setup.VAT_Validation_Length__c.MC__c , 
&apos;MT&apos;, $Setup.VAT_Validation_Length__c.MT__c , 
&apos;SAP_0111&apos;, $Setup.VAT_Validation_Length__c.NL__c , 
&apos;SAP_6864&apos;, $Setup.VAT_Validation_Length__c.NO__c ,
&apos;PL&apos;, $Setup.VAT_Validation_Length__c.PL__c , 
&apos;PT&apos;, $Setup.VAT_Validation_Length__c.PT__c , 
&apos;RO&apos;, $Setup.VAT_Validation_Length__c.RO__c , 
&apos;SAP_0976&apos;, $Setup.VAT_Validation_Length__c.SE__c , 
&apos;SI&apos;, $Setup.VAT_Validation_Length__c.SI__c , 
&apos;SK&apos;, $Setup.VAT_Validation_Length__c.SK__c , 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Reg Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vat_Registration_Number__c</fullName>
        <label>VAT Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__AddressRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__AddressValidationCode__c</fullName>
        <label>Address Validation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__AddressValidationError__c</fullName>
        <label>Address Validation Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__AddressValidationPending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Validation Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__AddressValidationTimestamp__c</fullName>
        <label>Address Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__Assets__c</fullName>
        <label>Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__AuthorizedShareCapital__c</fullName>
        <label>Authorized Share Capital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__CompanyInfoURL__c</fullName>
        <label>Company Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__ContinuationDate__c</fullName>
        <label>Continuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__CountryISO__c</fullName>
        <label>Country ISO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__DossierData__c</fullName>
        <label>Dossier Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__DossierIsRemoved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dossier Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__DossierNumber__c</fullName>
        <inlineHelpText>Chamber of Commerce dossier number</inlineHelpText>
        <label>Dossier Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__DossierTimestamp__c</fullName>
        <label>Dossier Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__DossierUpdateSubscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dossier Update Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__DossierUpdateTypes__c</fullName>
        <label>Dossier Update Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ChamberNo</fullName>
                </value>
                <value>
                    <fullName>Legalform</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>EstablishmentAddress</fullName>
                </value>
                <value>
                    <fullName>CorrespondenceAddress</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Activity</fullName>
                </value>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>FinancialStatus</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>ImportExport</fullName>
                </value>
                <value>
                    <fullName>ContactPerson</fullName>
                </value>
                <value>
                    <fullName>Capital</fullName>
                </value>
                <value>
                    <fullName>SubscriptionDates</fullName>
                </value>
                <value>
                    <fullName>Tradenames</fullName>
                </value>
                <value>
                    <fullName>Establishment</fullName>
                </value>
                <value>
                    <fullName>RSIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WSONE_DATA__DutchBusinessValidationData__c</fullName>
        <label>Dutch Business Validation Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__DutchBusinessValidationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dutch Business Validation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__DutchBusinessValidationStatus__c</fullName>
        <label>Dutch Business Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__DutchLeadGenerationInstance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dutch Lead Generation Instance</label>
        <referenceTo>WSONE__DutchLeadGenerationInstance__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__EstablishmentDate__c</fullName>
        <label>Establishment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__EstablishmentNumber__c</fullName>
        <inlineHelpText>The identification number for this establishment</inlineHelpText>
        <label>Establishment Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__ExtractData__c</fullName>
        <label>Extract Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__ExtractTimestamp__c</fullName>
        <label>Extract Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__FinancialSummaryDate__c</fullName>
        <label>Financial Summary Date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__FoundingDate__c</fullName>
        <label>Founding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__HouseNumberAddition__c</fullName>
        <label>House Number Addition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__HouseNumber__c</fullName>
        <label>House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__IndicationBankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bankrupt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__IndicationDebtorInPossession__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debtor In Possession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__IndicationEconomicallyActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Economically Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__IndicationExport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__IndicationImport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__IndicationMainBranch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__IndicationNonMailing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__IsRemoved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__IssuedShareCapital__c</fullName>
        <label>Issued Share Capital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__LastBusinessCheck__c</fullName>
        <label>Last Business Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__LegalFormDescription__c</fullName>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__LegalName__c</fullName>
        <description>Legal corporation name.  Formal name of the business.</description>
        <label>Legal Name</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__MainBranchKvKDossierNumber__c</fullName>
        <label>Main Branch Dossier Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__MainEstablishmentNumber__c</fullName>
        <inlineHelpText>The establishment number for the main establishment</inlineHelpText>
        <label>Main Establishment Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__NumberFulltimeEmployees__c</fullName>
        <label>Number of Fulltime Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__NumberOfSubsidiaries__c</fullName>
        <label>Number of Subsidiaries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__PaidUpShareCapital__c</fullName>
        <label>Paid Up Share Capital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__ParentKvKNumber__c</fullName>
        <label>Parent KvK Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__PersonnelReferenceDate__c</fullName>
        <label>Personnel Reference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__PostalBox__c</fullName>
        <label>Postal Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__PrimarySBIDescription__c</fullName>
        <label>Primary SBI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__PrimarySBI__c</fullName>
        <label>Primary SBI Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__Profit__c</fullName>
        <label>Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__RSIN__c</fullName>
        <inlineHelpText>The owners/holders identification number</inlineHelpText>
        <label>RSIN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__SecondarySBI1Description__c</fullName>
        <label>Secondary SBI 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__SecondarySBI1__c</fullName>
        <label>Secondary SBI Code 1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__SecondarySBI2Description__c</fullName>
        <label>Secondary SBI 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__SecondarySBI2__c</fullName>
        <label>Secondary SBI Code 2</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__StreetOnly__c</fullName>
        <label>Street Only</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__TradeNames__c</fullName>
        <label>Trade Names</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__Turnover__c</fullName>
        <label>Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__UltimateParentKvKNumber__c</fullName>
        <label>Ultimate Parent KvK Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE_DATA__VATNumber__c</fullName>
        <label>VAT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>utmccn__c</fullName>
        <label>utmccn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utmcct__c</fullName>
        <label>utmcct</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>utmcmd__c</fullName>
        <label>utmcmd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utmcsr__c</fullName>
        <label>utmcsr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utmctr__c</fullName>
        <label>utmctr</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>utmdclid__c</fullName>
        <label>utmdclid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utmgclid__c</fullName>
        <label>utmgclid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Priority_Score__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,In Progress</value>
        </filters>
        <label>All Open Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>JDE_Professional_0</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Disqualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Disqualified</value>
        </filters>
        <label>All Disqualified Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>JDE_Professional_0</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Converted</value>
        </filters>
        <label>All Converted Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>JDE_Professional_0</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ONLINE_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Main_City__c</columns>
        <columns>LEAD.CITY</columns>
        <columns>Touchpoint_Type__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CONVERTED</columns>
        <columns>Priority_Score__c</columns>
        <columns>Opt_Out__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Touchpoint_Type__c</field>
            <operation>equals</operation>
            <value>ONLINE INFORMATION REQUEST,ONLINE INFORMATION REQUEST MC,ONLINE QUOTE REQUEST,ONLINE QUOTE REQUEST MC</value>
        </filters>
        <label>All ONLINE Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>JDE_Professional_0</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_MQL_Lead_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>BE - MQL Lead Queue</label>
        <queue>BE_MQL_Lead_Queue</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>BE_Professional_Belgium_Country_Manager_Professional_1</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>JDE_Professional_0</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>